--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepush": "npm run build"
+    "prepush": "npm run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -20,7 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "husky": "^9.1.0",
+    "husky": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
