--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "^5.51.9",
+    "@tanstack/react-query-devtools": "^5.51.9",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
