--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "react-intersection-observer": "^9.13.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
