feat: 체크박스 클릭 시, routine_done 테이블과 routine_done_daily 테이블에 모두 새로운 레코드를 생성해야 하는 경우에 대한 로직 작성 완료

--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "husky": "^8.0.0",
