--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "react-intersection-observer": "^9.13.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
