--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.414.0",
+    "memoize-one": "^6.0.0",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
@@ -33,6 +34,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
+    "swiper": "^11.1.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
