--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "immer": "^10.1.1",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "node-schedule": "^2.1.1",
     "pg": "^8.12.0",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
