--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Call API
         run: |
           echo "Calling your API..."
-          curl -X POST https://growth-tracker-dev.vercel.app/api/scheduler
+          curl -X GET https://growth-tracker-dev.vercel.app/api/scheduler
