fix: 스케줄러 POST => GET

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Call API
         run: |
           echo "Calling your API..."
-          curl --location --request POST 'https://growth-tracker-ecru.vercel.app/api/scheduler'
+          curl --request GET 'https://growth-tracker-ecru.vercel.app/api/scheduler'
