--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -3,7 +3,7 @@ name: Call API After Vercel Deploy
 on:
   push:
     branches:
-      - main
+      - develop
 
 jobs:
   wait-for-vercel:
@@ -39,4 +39,4 @@ jobs:
       - name: Call API
         run: |
           echo "Calling your API..."
-          curl --request GET 'https://growth-tracker-ecru.vercel.app/api/scheduler'
+          curl --request GET 'https://growth-tracker-umber.vercel.app/api/scheduler'
