--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,42 +1,14 @@
-name: Call API After Vercel Deploy
+name: Scheduled Vercel Cron Job
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '* * * * *'  # 매일 오전 5시
 
 jobs:
-  wait-for-vercel:
+  cron:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Wait for Vercel Deployment
-        id: wait-for-vercel
+      - name: Trigger Vercel API
         run: |
-          echo "Waiting for Vercel deployment..."
-          while true; do
-            response=$(curl -s -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" "https://api.vercel.com/v5/deployments?projectId=${{ secrets.VERCEL_PROJECT_ID }}")
-            status=$(echo $response | jq -r '.deployments[0].state')
-            url=$(echo $response | jq -r '.deployments[0].url')
-            echo "API Response: $response"
-            if [ "$status" = "READY" ]; then
-              echo "Deployment is ready!"
-              echo "::set-output name=deployment_url::$url"
-              break
-            else
-              echo "Deployment status: $status. Waiting..."
-              sleep 10
-            fi
-          done
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-
-  call-api:
-    runs-on: ubuntu-latest
-    needs: wait-for-vercel
-
-    steps:
-      - name: Call API
-        run: |
-          echo "Calling your API..."
-          curl --request GET 'https://growth-tracker-ecru.vercel.app/api/scheduler'
+          curl -X GET "https://growth-tracker-ecru.vercel.app/api/scheduler?token=${{ secrets.VERCEL_SECRET_TOKEN }}"
