fix: 보안 신경안쓰고 우선 배포

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - name: Trigger Vercel API
         run: |
-          curl -X GET "https://growth-tracker-ecru.vercel.app/api/scheduler?token=${{ secrets.VERCEL_SECRET_TOKEN }}"
+          curl -X GET "https://growth-tracker-ecru.vercel.app/api/scheduler"
