--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '* * * * *'  # 매일 오후 3시 UTC (한국 시간으로는 오전 12시)
+    - cron: '* 1 * * *'  # 매일 오후 3시 UTC (한국 시간으로는 오전 12시)
 
 jobs:
   cron:
