--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,12 +1,12 @@
-name: Call URL Daily on Main Branch
+name: Call URL every 5 minutes
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  
+    - cron: '*/5 * * * *'
 
 jobs:
   call-url:
     runs-on: ubuntu-latest
     steps:
-      - name: Call specific URL
-        run: curl -X GET "https://growth-tracker-ecru.vercel.app/api/vercel-cron"  # 호출하려는 URL로 변경하세요
+      - name: Call URL
+        run: curl -X GET "https://growth-tracker-ecru.vercel.app/api/vercel-cron"
