--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,8 +1,8 @@
-name: Call URL every 5 minutes
+name: Call URL every 
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '30 4 * * *'
 
 jobs:
   call-url:
