--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@meinefinsternis/react-horizontal-date-picker": "^1.0.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-hook/resize-observer": "^2.0.2",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.51.21",
@@ -38,6 +39,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
+    "react-scroll": "^1.9.0",
     "react-transition-group": "^4.4.5",
     "swiper": "^11.1.8",
     "tailwind-merge": "^2.4.0",
@@ -53,6 +55,7 @@
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
