--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^16.6.0",
     "@meinefinsternis/react-horizontal-date-picker": "^1.0.1",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/pie": "^0.87.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-hook/resize-observer": "^2.0.2",
     "@supabase/ssr": "^0.4.0",
@@ -25,6 +28,8 @@
     "@types/react-transition-group": "^4.4.10",
     "antd": "^5.19.4",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -36,6 +41,7 @@
     "pg": "^8.12.0",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
