--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/react-slick": "^1.1.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -47,6 +48,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-scroll": "^1.9.0",
     "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.8",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
