--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
     "memoize-one": "^6.0.0",
     "next": "14.2.5",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/node-schedule": "^2.1.7",
     "@types/react": "^18",
